# xcb-imdkit-rs

./: .gitignore  .gitmodules  Cargo.toml  Readme.md  bindgen.sh  build.rs  logging.c  xcb-imdkit.h
.github/workflows/: build.yml
examples/: example.rs
src/: bindings.rs  clib.rs  lib.rs
