[package]
name = "xcb-imdkit"
version = "0.1.0"
edition = "2018"
license = "LGPL-2.1-only"
description = "Wrapper around xcb-imdkit, providing an IME client for the XIM protocol using XCB"
homepage = "https://github.com/H-M-H/xcb-imdkit-rs"
repository = "https://github.com/H-M-H/xcb-imdkit-rs"
readme = "Readme.md"
keywords = ["ffi", "xcb", "x11", "ime", "xim"]
categories = ["api-bindings", "gui", "text-processing"]

[lib]
name = "xcb_imdkit"
path = "src/lib.rs"

[[example]]
name = "example"
path = "examples/example.rs"

[dependencies]
xcb = "0.9.0"
lazy_static = "1.4.0"

[build-dependencies]
cc = "1.0"
pkg-config = "0.3.19"

[features]
use-system-lib = []
