[package]
name = "xcb-imdkit"
version = "0.2.0"
edition = "2018"
license = "LGPL-2.1-only"
description = "Wrapper around xcb-imdkit, providing an IME client for the XIM protocol using XCB"
homepage = "https://github.com/H-M-H/xcb-imdkit-rs"
repository = "https://github.com/H-M-H/xcb-imdkit-rs"
readme = "Readme.md"
keywords = ["ffi", "xcb", "x11", "ime", "xim"]
categories = ["api-bindings", "gui", "text-processing"]

[lib]
name = "xcb_imdkit"
path = "src/lib.rs"

[[example]]
name = "example"
path = "examples/example.rs"

[dependencies]
xcb = {git="https://github.com/rust-x-bindings/rust-xcb", rev="dbdaa01c178c6fbe68bd51b7ad44c08172181083", features=["xkb"]}
lazy_static = "1.4.0"
bitflags = "1.3"

[build-dependencies]
cc = "1.0"
pkg-config = "0.3.19"

[features]
use-system-lib = []
